@@ -27,7 +27,7 @@ $author = sprintf($lang_plugin_newsletter['author'],
     '<a href="http://forum.coppermine-gallery.net/index.php?action=profile;u=2" rel="external" class="external">Joachim Müller</a>');
 
 $version = '0.17';
-$plugin_cpg_version = array('min' => '1.5');
+$plugin_cpg_version = array('min' => '1.5.10');
 $extra_info = <<<EOT
     <a href="index.php?file=newsletter/admin" class="admin_menu">{$newsletter_icon_array['config']}{$lang_plugin_newsletter['config']}</a>&nbsp;
     <a href="index.php?file=newsletter/catlist" class="admin_menu">{$newsletter_icon_array['catlist']}{$lang_plugin_newsletter['newsletter_categories']}</a>&nbsp;
